# Tasks.md

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  api.js  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main-old.rs  main.rs
src/components/: card-name.jsx  card.jsx  drag-and-drop.jsx  expanded-card.jsx  lane-name.jsx  menu.jsx  name-input.jsx
